deployments/nginx-dep/httpd-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-dep
  namespace: ingress-prac
  labels:
    app: httpd
spec:
  replicas: 1
  selector:
    matchLabels:
       app: httpd
  template:
    metadata:
      labels:
        app: httpd
    spec:
      containers:
        - name: httpd-container
          image: httpd
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
  namespace: ingress-prac
spec:
  selector:
    app: httpd
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
