deployments/nginx-dep/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:  
  name: ex-ingress
  namespace: ingress-prac
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  #defaultBackend:
  # service:
  #   name: nginx-service
  #   port:
  #     number: 8081
  rules:
   - http:
      paths: 
       - path: /nginx
         pathType: Prefix
         backend:
           service:
             name: nginx-service
             port: 
               number: 80
       - path: /httpd
         pathType: Prefix
         backend:
           service:
             name: httpd-service
             port:
               number: 8080
